chore: add test infrastructure with Busted and Docker repro (#40)
- Add Busted test framework integration with custom test runner
- Create Docker-based reproduction environment for isolated testing
- Add comprehensive test suites for:
  - SessionRegistry (tabpage instance management)
  - ChatWidget (UI component lifecycle and rendering)
  - CodeSelection (visual mode selection and context handling)
  - FileList (file tracking and diff handling)
  - SlashCommands (command parsing and execution)
  - AgentModes (mode validation and transitions)
- Update CI workflow to run tests
- Add detailed testing documentation in tests/AGENTS.md
- Configure Luacheck and LuaLS for test file support
- Add test utilities and helper functions

closes #27

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -5,6 +5,7 @@ on:
     branches: [main]
     paths:
       - 'lua/**'
+      - 'tests/**'
       - 'Makefile'
       - '.luarc.json'
       - 'stylua.toml'
@@ -13,6 +14,7 @@ on:
     branches: [main]
     paths:
       - 'lua/**'
+      - 'tests/**'
       - 'Makefile'
       - '.luarc.json'
       - 'stylua.toml'
@@ -67,13 +69,58 @@ jobs:
       - name: Run luacheck
         run: make luacheck
 
+  test:
+    runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        neovim-version: ['v0.11.5', 'nightly']
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install system dependencies
+        run: |
+          # libreadline-dev: Required by hererocks to build Lua 5.1 for busted tests
+          # Can be removed if tests no longer use hererocks or switch to pre-built Lua
+          sudo apt-get update && sudo apt-get install -y libreadline-dev
+
+      - name: Setup directories
+        run: mkdir -p .local/nvim .local/bin
+
+      - name: Cache Neovim
+        id: cache-neovim
+        uses: actions/cache@v4
+        with:
+          path: .local/nvim
+          key: neovim-${{ runner.os }}-${{ matrix.neovim-version }}
+
+      - name: Install Neovim
+        if: steps.cache-neovim.outputs.cache-hit != 'true'
+        run: |
+          curl -sL "https://github.com/neovim/neovim/releases/download/${{ matrix.neovim-version }}/nvim-linux-x86_64.tar.gz" |
+            tar xzf - --strip-components=1 -C .local/nvim
+
+      - name: Cache lazy_repro
+        uses: actions/cache@v4
+        with:
+          path: lazy_repro
+          key: lazy-repro-${{ runner.os }}-${{ hashFiles('tests/busted.lua') }}
+
+      - name: Run tests
+        run: |
+          ln -sf "$PWD/.local/nvim/bin/nvim" .local/bin/nvim
+          export PATH="$PWD/.local/bin:$PATH"
+          make test
+
   typecheck:
     runs-on: ubuntu-latest
 
-    # TODO: Enable matrix testing when unit tests are added
-    # strategy:
-    #   matrix:
-    #     neovim-version: ['v0.11.5', 'nightly']
+    strategy:
+      fail-fast: false
+      matrix:
+        neovim-version: ['v0.11.5', 'nightly']
 
     steps:
       - uses: actions/checkout@v4
@@ -86,12 +133,12 @@ jobs:
         uses: actions/cache@v4
         with:
           path: .local/nvim
-          key: neovim-${{ runner.os }}-v0.11.5
+          key: neovim-${{ runner.os }}-${{ matrix.neovim-version }}
 
       - name: Install Neovim
         if: steps.cache-neovim.outputs.cache-hit != 'true'
         run: |
-          curl -sL "https://github.com/neovim/neovim/releases/download/v0.11.5/nvim-linux-x86_64.tar.gz" |
+          curl -sL "https://github.com/neovim/neovim/releases/download/${{ matrix.neovim-version }}/nvim-linux-x86_64.tar.gz" |
             tar xzf - --strip-components=1 -C .local/nvim
 
       - name: Cache LuaLS
