--- a/.luarc.json
+++ b/.luarc.json
@@ -31,6 +31,8 @@
       "$VIMRUNTIME/lua",
       "$VIMRUNTIME/lua/vim",
       "${3rd}/luv/library",
+      "${3rd}/luassert/library",
+      "${3rd}/busted/library",
       "$PWD/lua"
     ],
     "checkThirdParty": false,
