--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,11 @@ node_modules/
 
 .cache/
 .temp/
+
+# CI folder where nvim is installed
 .local/
 
+# Folder used for isolated dependencies for tests
 lazy_repro/
 
 # Mac files
